@@ -1,4 +1,4 @@
-# Version 2.06 build 1
+# Version 2.06 build 3
 #
 # Ini style final detailing as much protocol-specific information as possible.
 #
@@ -986,6 +986,7 @@ Code.HCS08= 20 06 17 2F 11 08 0B B8 04 60 0E 45 23 46 02 60 \
 Code.MAXQ610=30 64 11 AC 00 05 18 00 2C 01 18 00 58 02 30 00 2C 01 30 00 58 02 94 11 F0 00 58 02 98 3A 78 00 58 02 17 00 2E 00 E4 00 72 00 22 00 43 00 50 01 A8 00 40 84 00 00 00 01 88 56 08 D0 01 20 40 46 00 56 24 D0 04 20 30 54 00 20 34 54 00 20 38 56 00 20 3C 56 00 20 42 58 00 20 48 5A 00 54 22 47 00 57 24 00 00 56 20 D0 02 20 30 4C 00 20 34 4C 00 20 38 4E 00 20 3C 4E 00 20 42 50 00 20 48 52 00 54 33 69 00 16 D5 D1 03 12 D6 D1 02 16 D6 D6 03 12 D7 D1 04 16 D7 D7 03 12 D8 D1 06 16 D8 D8 03 00 D2 D5 00 18 BE D8 07 03 D2 D2 BE 18 BE D7 05 03 D2 D2 BE 18 BE D6 03 03 D2 D2 BE 51 D2 D2 00 C6 44 C3 00 00 00 00 30 71 32 10 56 10 BA 01 20 42 48 00 15 95 95 10 16 96 96 1F
 Code.TI2541=01 FA 00 21 11 AC 00 05 18 00 2C 01 18 00 58 02 30 00 2C 01 30 00 58 02 94 11 F0 00 58 02 98 3A 78 00 58 02 17 00 2E 00 E4 00 72 00 22 00 43 00 50 01 A8 00 40 84 00 00 00 01 88 56 08 02 01 20 D0 D6 00 56 24 02 04 20 C0 E4 00 20 C4 E4 00 20 C8 E6 00 20 CC E6 00 20 D2 E8 00 20 D8 EA 00 54 AF 00 21 57 24 00 00 56 20 02 02 20 C0 DC 00 20 C4 DC 00 20 C8 DE 00 20 CC DE 00 20 D2 E0 00 20 D8 E2 00 54 04 01 21 16 07 03 03 12 08 03 02 16 08 08 03 12 09 03 04 16 09 09 03 12 0A 03 06 16 0A 0A 03 00 04 07 00 18 2A 0A 07 03 04 04 2A 18 2A 09 05 03 04 04 2A 18 2A 08 03 03 04 04 2A 51 04 04 00 C6 44 C3 00 00 00 00 30 71 32 10 56 10 42 01 20 D2 D8 00 15 B1 B1 10 16 B2 B2 1F
 
+
 [Dishplayer]
 PID=01 0F
 DevParms=Device Code:2=3,Unit:5=0
@@ -1689,6 +1690,7 @@ Code.HCS08=20 1B 23 4A 52 8F 45 08 08 00 D5 00 DE 00 D5 02 95 27 84 06 D0 03 54 
 Code.MAXQ610=34 6D 52 14 10 00 10 00 10 00 30 00 E9 02 81 00 3F 00 CA 04 C9 0A 46 06 02 03 03 01 0B 42 54 06 71 72 73 74 75 76 01 0A 42 56 05 71 72 73 74 75 81 10 04 52 38 40 02 42 54 06 71 72 73 74 75 76 80 04 52 38 42 02 42 54 06 71 72 73 74 75 76
 Code.TI2541=01 10 01 21 52 14 10 00 10 00 10 00 30 00 E9 02 81 00 3F 00 CA 04 C9 0A 46 06 02 03 03 01 0B 42 54 06 71 72 73 74 75 76 01 0A 42 56 05 71 72 73 74 75 81 10 04 52 C8 D0 02 42 54 06 71 72 73 74 75 76 80 04 52 C8 D2 02 42 54 06 71 72 73 74 75 76
 
+
 [Konka]
 PID=01 9B
 DevParms=Device:8
@@ -2259,7 +2261,6 @@ CmdIndex=1
 Notes=There are primarily 2 versions of the NEC protocol: NEC1 and NEC2. The difference between the two is in how the codes repeat when a button is held down. Even if you use the wrong version, it will probably still work, except that the codes won't repeat (or vice versa).\n\n\
 Both NEC1 and NEC2 use either one device number or a device.subdevice pair. By convention, if the subdevice is not specified it is automatically sent as (255 - device).  An equivalent statement is an unspecified subdevice is sent as the binary complement of the device. 
 Code.740=0B 1A 22 80 15 E3 BE 01 16 08 08 01 A1 03 17 69 78 54 06 C7 02 08 01 01 03 DB E7 5F 08 3C FE 5D 3C F1 5E 80 06 3C BE 5D 3C B1 5E A5 60 85 5F 44 60 E6 69 4C 00 FF
-
 
 [NEC 1or2 Combo]
 PID=01 7E
@@ -3172,7 +3173,6 @@ For double-style signals, the prefix device number must be entered in Device 0. 
 The main device number must be entered in DevP2 
 Code.S3C80=40 84 62 8B 14 A5 54 08 08 01 12 00 F0 01 12 03 02 32 B4 10 B0 08 39 00 02 08 0A C0 C0 56 C0 0B 7B 0B 87 10 03 19 03 46 29 01 8D 01 46 87 10 04 19 04 56 29 EF 0C 03 A6 0D 02 EB 02 0C 05 09 0D B0 01 E6 10 01 F6 FF 56 FB 06 F6 FF 50 7B F1 AF E6 01 05 E6 10 06 F6 01 46 8D 01 0A
 Code.HCS08=20 17 21 43 62 A5 54 08 08 01 11 01 04 01 11 03 16 32 C8 10 AF 08 4D 00 02 8C B6 67 44 A4 03 97 00 67 09 E6 60 B7 60 10 A3 CC FF 5F E6 61 B7 61 19 A3 B6 B2 A1 02 27 03 6E 01 B2 3F AC 6E 01 A9 AD E7 6E 05 AC 6E 06 A9 AD DF CD FF 92 25 EC 81																
-
 [Pioneer MIX]
 PID=00 7E
 VariantName=5
@@ -4358,6 +4358,7 @@ Code.HCS08=20 1B 23 4A 52 8F 45 08 08 00 D5 00 DE 00 D5 02 95 27 84 06 D0 03 54 
 Code.MAXQ610=34 6D 52 14 10 00 10 00 10 00 30 00 E9 02 81 00 3F 00 CA 04 C9 0A 46 06 02 03 03 01 0B 42 54 06 71 72 73 74 75 76 01 0A 42 56 05 71 72 73 74 75 81 10 04 52 38 40 02 42 54 06 71 72 73 74 75 76 80 04 52 38 42 02 42 54 06 71 72 73 74 75 76
 Code.TI2541=01 10 01 21 52 14 10 00 10 00 10 00 30 00 E9 02 81 00 3F 00 CA 04 C9 0A 46 06 02 03 03 01 0B 42 54 06 71 72 73 74 75 76 01 0A 42 56 05 71 72 73 74 75 81 10 04 52 C8 D0 02 42 54 06 71 72 73 74 75 76 80 04 52 C8 D2 02 42 54 06 71 72 73 74 75 76
 
+
 [Somfy]
 PID=01 A1
 VariantName=Somfy2
@@ -4610,7 +4611,6 @@ Code.HCS08=20 17 17 30 21 C6 81 10 02 08 00 6A 00 6B 00 6A 00 6B C3 23 00 00 00 
 #Code.MAXQ610=21 47 41 8e 00 04 0c 00 0c 00 00 00 0c 00 0c 00 00 00 1d 16 02 01 01 01 08 62 10 03 10 71 74 00 62 00 23 10 71 74 62 10 23 10 72 74 62 00 03 10 72 73
 #needs investigation to identify the 4 bytes of fixed data.  Also this is variant 2 of 01BD
 #Code.TI2541=01 B1 00 21 41 8E 00 04 0C 00 0C 00 00 00 0C 00 0C 00 00 00 12 16 02 01 01 01 08 62 10 03 10 71 74 00 62 00 23 10 71 74 62 10 23 10 72 74 62 00 03 10 72 73 
-
 
 [Teac-K]
 OldNames=Teac-K (*)
@@ -5939,7 +5939,6 @@ Code.HCS08=20 19 04 05 61 8D D1 80 04 04 08 00 0D 00 1E 00 00 00 11 52 13 00 00 
 PID=01 19
 Code.HCS08=20 19 04 05 62 8D D1 80 04 04 08 00 0F 00 1A 00 00 00 10 4F D8 00 00 00 00 00 03 6E 01 A9 6E 08 AA 55 66 4E 65 67 35 65 AD 03 CC FF 5F B6 61 B8 62 B8 63 B8 64 B8 65 B8 66 B8 67 B7 68 81
 
-
 [pid: 01 1C]
 PID=01 1C
 Code.HCS08=20 19 00 00 21 84 09 03 01 00 09 00 00 00 00 30 CA 20 7D 00 01 30 27 27 F3 47 30 00 62 1F 04 62 06 06 62 0E CC FF 5F 45 38 DE 35 78 55 7A 35 74 20 08 55 7C 35 78 55 72 35 74 CC FF 5C 45 27 2E 35 78 6E 03 6A 45 00 02 35 6C 45 00 1F 35 6E 45 00 02 35 70 45 00 D8 35 72 45 23 28 35 74 6E 81 A2 6E 04 A3 3F AB CD FF 5C 3C AC 45 13 87 35 74 45 03 7B 35 6E 45 0E 76 35 72 3F A3 CD FF 5C 45 1A C4 35 74 6E 09 6D 3F 6E 3F 6F 6E 84 A2 6E 01 A3 CC FF 5C
@@ -6174,7 +6173,7 @@ PID=01 EF
 Code.MAXQ610=33 69 11 0E 15 00 15 00 15 00 40 00 68 07 55 00 2A 00 00 00 62 54 02 71 70 
 
 [pid: 01 F2]
-PID=`
+PID=01 F2
 Code.S3C80=47 93 62 8B 0A 80 00 05 35 01 A8 00 DE 00 CC 08 00 58 04 37 50 06 37 00 03 B6 04 F0 37 52 06 37 00 03 B6 09 80 E4 0A 0B 38 09 F6 FF 66 49 09 59 0A 38 0B F6 FF 66 49 0B 59 0C 1C 12 F6 01 4C 77 71 38 03 F6 FF 80 38 04 F6 FF 7C B0 C6 87 36 05 F6 FF 80 6E 37 66 F6 77 70 C6 F8 88 00 F6 01 58 F6 01 0A 7B D5 AF 2C 08 CF 10 C5 10 C4 DF 10 C5 10 C4 90 C3 FB 03 B6 C5 03 2A ED AF 4C 04 8B 02 4C 08 90 C3 7B 09 77 70 1C 18 F6 01 6D 8B 07 1C 16 F6 01 64 77 71 4A EA AF
 Code.MAXQ610=35 6F 62 0E 10 00 00 00 00 00 10 00 D5 09 60 00 20 00 00 86 00 00 00 00 00 00 28 50 D8 D6 D9 50 DA D7 DB 55 0C D1 01 55 14 D1 02 57 18 00 00 10 89 00 41 10 8A 00 F0 57 0C 00 00 10 89 00 48 10 8A 00 C0 42 50 0A 70 31 72 73 74 75 78 79 7A 7B
 
