@@ -10,7 +10,9 @@ Changes for v2.06
 - Fix bug causing device upgrades in segmented remotes to be sometimes mis-identified as device-dependent (Graham)
 - Improve handling of highlighting by adding further checking (Graham)
 - Fix bug causing wrong choice between S3C80 and S3F80 data to appear on Functions tab of Protocol Editor (Graham)
-- Add Analyzer tab for MAXQ and TI2541 protocols in RMPB and RMIR Protocol Editor (Graham)
+- Add Analyzer and PF Description tabs for MAXQ and TI2541 protocols in RMPB and RMIR Protocol Editor (Graham)
+- Fix bug in adding protocols in .prot files to ProtocolManager (Graham)
+- Revised protocols.ini to better handle RC6-6-32 and RC6-M-32 versus MCE. Added PIDs 021F and 0230 (Dave Reed)
 
 Changes for v2.05
 -- Private build 1
